--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux-form": "^1.16.14",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.2",
     "reactstrap": "^9.0.2",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
