--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "bootstrap-social": "^5.1.1",
     "cross-fetch": "^3.1.5",
     "font-awesome": "^4.7.0",
+    "install": "^0.13.0",
+    "jquery": "^3.6.0",
+    "npm": "^8.15.0",
+    "popper.js": "^1.16.1",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-animation-components": "^3.0.0",
